[package]
name = "quant_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
surrealdb = "1.0.0-beta.9+20230402"
tokio = { version = "1.28.2", features = ["full", "macros", "rt-multi-thread"] }
tokio-stream = "0.1.14"

