[package]
name = "quant_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
surrealdb = { git = "https://github.com/surrealdb/surrealdb.git", tag = "v1.0.0-beta.9" }
tokio = { version = "1.28.2", features = ["full", "macros", "rt-multi-thread"] }
tokio-stream = "0.1.14"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tracing-appender = "0.2.2"
dbn = "0.7.1"
scraper = "0.17.1"
selectors = "0.25.0"
reqwest = "0.11.18"
cssparser = "0.31.2"
polars = { version = "0.30.0", features = ["lazy"] }
chrono = "0.4.26"
polars-sql = "0.30.0"
dioxus = "0.3.2"
plotters = "0.3.5"


